# useless-script

./: .gitignore  .gitmodules  DiskClear.bat  MultiMCInstaller.bat  README.md  avianchat.bat  bigfilemaker(multifile).bat  bigfilemaker(onefile).bat  color.bat  dinst.bat  dmain.bat  dredirect.bat  fileexplorer.bat  internetchecker.bat  texteditor.bat
BigFileMaker/: bigfilemaker(multifile).bat  bigfilemaker(multifile+random).bat  bigfilemaker(onefile).bat  bigfilemaker(onefile+random).bat
DJI/: README.md  srt2gpx.html  srt2gpx.py
HanlinQT/: .gitignore  README.ans.md  README.autoqt.md  README.md  autoqt.py  crehlehtml.py  hanlinqt.py  hleexam.py  hleqa.html
Installer/: AutoClickerInstaller.bat  DiscordUpdater-Debian.sh  MultiMCInstaller.bat  README.md
OneExam/: README.md  oneexam.py
Useless-Tools/: .gitignore  AutoKillEdge.bat  RPG-Maker-MV-Decrypter.py  agpp_custom_generator.py  anime1me.py  hanime1me.py  iqiyi.py  myself.py  requirements.txt  shutdowntool.bat  ssh-copy-id.bat
discord/: .gitignore  Activity.py  AntiBeast.py  AutoModerate.py  AutoPublish.py  AutoReply.py  BadQuote.py  Bazi.py  BotCustomizer.py  Contribute.py  CustomPrefix.py  Music.py  (+58 more)
oxwu/: .gitignore  README.md  build.bat  discord.py  main.js  package-lock.json  package.json  patch.bat  patch.sh  pyproject.toml  town_id.json  town_id.md
oxwu/proxyapi/: app.py  auth_utils.py  bot.py  db_init.py  requirements.txt
oxwu/proxyapi/templates/: dashboard.html  docs.html  landing.html  uooxwu_docs.html
oxwu/uooxwu/: __init__.py  client.py  example.py  models.py
oxwu/uooxwu/data/: town_id.json
(+146 files in other folders)
